--- a/assets/css/bootstrap-material-design.css
+++ b/assets/css/bootstrap-material-design.css
@@ -115,9 +115,9 @@ body .container-fluid .jumbotron {
   background-color: #fff;
   padding: 19px;
   margin-bottom: 20px;
-  -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /*-webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 2px 2.5px 0px #00ffff, 0 2.5px 2px 0 #00ffff;
-  border-radius: 2px;
+  border-radius: 2px;*/
   border: 0;
 }
 body .container .well p,
@@ -134,9 +134,9 @@ body .container .well-default,
 body .container-fluid .well-default,
 body .container .jumbotron-default,
 body .container-fluid .jumbotron-default {
-  background: #003333;
+  background-color: #003333;
   color: #00ffff;
-  border:1px solid #00ffff;
+  /*border:1px solid #00ffff;*/
 }
 body .container .well-inverse,
 body .container-fluid .well-inverse,
@@ -1913,8 +1913,6 @@ label.control-label {
   color: #00ffff;
   font-weight: 100;
   margin: 16px 0 0 0;
-  padding-right: 4px;
-  text-align: left;
 }
 .form-group .help-block {
   margin-top: 0;
@@ -2288,14 +2286,15 @@ legend {
 .navbar .navbar-default .navbar-toggle,
 .navbar .navbar-inverse .navbar-toggle {
   border-color: transparent;
+  margin-top: 6px
 }
 .navbar .navbar-collapse,
 .navbar .navbar-form {
   border-color: #00ffff;
   color:#00ffff;
   background-color: #003333;
-   box-shadow: 0px 0px 16px 8px rgba(150, 255, 255, 0.5),
-    inset 0px 1px 4px 2px rgba(21, 211, 233, 0.3);
+  /* box-shadow: 0px 0px 16px 8px rgba(150, 255, 255, 0.5),
+    inset 0px 1px 4px 2px rgba(21, 211, 233, 0.3);*/
   /*box-shadow: 0px 2px 5px 0 #00ffff, 0 3px 5px -1px rgba(0,0,0,.075), 0 3px 4px 0 #00ffff;*/
   /*animation-name: flicker;
   animation-duration: 4s;
